2003-12-03  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.c (uri_to_evname): Updated to add use mail subdirs.
	(mail_config_uri_renamed): Updated cachenames[]
	(mail_config_folder_to_cachename): Fixed to use the correct path.

	* em-folder-browser.c (emfb_create_view_menus): Updated the
	galview path to point to the evo-1.5 location.
	(emfb_set_folder): Update the galview view_instance.
	(emfb_create_view_instance): Split out from
	emfb_create_view_menus()
	(emfb_create_view_menus): Reduced code, call
	emfb_create_view_instance().

	* em-folder-selector.c (emfs_create_name_activate): Emit the OK
	response, not the CREATE_NEW response. Also,
	g_signal_emit_by_name() does not take a GQuark detail argument, so
	don't pass one. Fixes bug #51661.

2003-12-03  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c (emfv_set_folder): Sync the folder before
	replacing it with the new folder.

	* em-folder-tree.c (em_folder_tree_set_selected): Need to prepend
	a "/" to path if the path is the url fragment. Also fixed to
	select the store node if path == "/".
	(emft_popup_rename_folder): Set oldpath and newpath to the proper
	values. Fixes bug #51656.

	* em-folder-selector.c (em_folder_selector_get_selected_uri):
	Fixed a FIXME by using the CamelProvider url flags to determine if
	the url used url->fragment or url->path as the folder path.
	(em_folder_selector_get_selected_path): Don't allow path strings
	to start with "//".

2003-12-03  JP Rosevear <jpr@ximian.com>

	* em-folder-tree.c (em_folder_tree_destroy): remove the source
	before saving 

2003-12-03  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (em_folder_tree_save_state): Set the
	save_state_id to 0 or we will never get a chance to run again.

2003-12-03  Ettore Perazzoli  <ettore@ximian.com>

	* mail-vfolder.c: Do not #include "evolution-shell-component.h".

	* Makefile.am (libevolution_mail_la_SOURCES): Don't compile
	mail-importer.[ch] for now.

	* mail-component-factory.c: Do not #include